--- a/MerkuriaCafeArtesanal/index.html
+++ b/MerkuriaCafeArtesanal/index.html
@@ -2,144 +2,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Merkuria Café Artesanal, enfocado en café de especialidad y experiencias sensoriales.">
     <title>Merkuria Cafe Artesanal</title>
+    <meta name="description" content="Disfruta del café de especialidad y experiencias sensoriales en Merkuria Café Artesanal.">
     <link rel="canonical" href="https://www.merkuriacafe.com">
-    <meta property="og:title" content="Merkuria Café Artesanal">
-    <meta property="og:description" content="Disfruta de café de especialidad y experiencias sensoriales.">
+    <meta property="og:title" content="Merkuria Cafe Artesanal">
+    <meta property="og:description" content="Disfruta del café de especialidad y experiencias sensoriales en Merkuria Café Artesanal.">
     <meta property="og:image" content="placeholder.jpg">
     <meta property="og:url" content="https://www.merkuriacafe.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Merkuria Café Artesanal">
-    <meta name="twitter:description" content="Café de especialidad y experiencias sensoriales.">
+    <meta name="twitter:title" content="Merkuria Cafe Artesanal">
+    <meta name="twitter:description" content="Disfruta del café de especialidad y experiencias sensoriales en Merkuria Café Artesanal.">
     <meta name="twitter:image" content="placeholder.jpg">
     
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-gray-100">
-    <header class="sticky top-0 bg-white shadow">
+<body class="bg-white text-gray-800">
+    <header class="sticky top-0 z-10 bg-white shadow">
         <nav class="container mx-auto flex justify-between items-center p-4">
             <h1 class="text-xl font-bold">Merkuria Café</h1>
             <div>
-                <a href="#contact" class="cta bg-yellow-500 text-white px-4 py-2 rounded">Ordenar en Línea</a>
-                <a href="#ubicacion" class="ml-4 text-gray-700">Visitar la Tienda</a>
+                <a href="#contact" class="bg-yellow-500 text-white px-4 py-2 rounded" onclick="logCTA()">Ordenar en Línea</a>
+                <a href="#ubicacion" class="ml-4 text-yellow-500" onclick="logCTA()">Visitar la Tienda</a>
             </div>
         </nav>
     </header>
     <main>
-        <section class="hero text-center py-20">
-            <div class="container mx-auto">
-                <h2 class="text-4xl font-bold mb-2">Café de Especialidad</h2>
-                <p class="text-lg mb-6">Descubre nuestra historia y filosofía en cada taza.</p>
-                <img src="placeholder.jpg" alt="Taza de café" class="mx-auto rounded-lg shadow-lg mb-6">
+        <section class="hero h-screen flex items-center justify-center text-center">
+            <div>
+                <h2 class="text-4xl font-bold mb-2">Descubre el Sabor del Café Artesanal</h2>
+                <p class="mb-4">Sumérgete en nuestra historia y filosofía de café de especialidad.</p>
             </div>
         </section>
-        <section class="container mx-auto py-10">
-            <h3 class="text-3xl font-bold mb-4">Métodos de Preparación</h3>
+        <section class="container mx-auto my-12">
+            <h3 class="text-2xl font-semibold mb-6">Métodos de Preparación</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="card bg-white rounded-lg shadow p-4">
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
                     <h4 class="font-semibold">Espresso</h4>
-                    <p>Rápido y concentrado.</p>
+                    <p>Intenso y concentrado.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
                     <h4 class="font-semibold">Pour-Over</h4>
                     <p>Control total sobre el sabor.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
                     <h4 class="font-semibold">Prensa Francesa</h4>
-                    <p>Rico y robusto.</p>
+                    <p>Rico y suave.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
                     <h4 class="font-semibold">Cold Brew</h4>
-                    <p>Suave y refrescante.</p>
+                    <p>Refrescante y suave.</p>
                 </div>
             </div>
         </section>
-        <section class="container mx-auto py-10">
-            <h3 class="text-3xl font-bold mb-4">Variedades de Café</h3>
+        <section class="container mx-auto my-12">
+            <h3 class="text-2xl font-semibold mb-6">Variedades de Café</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="card bg-white rounded-lg shadow p-4">
-                    <h4 class="font-semibold">Café Arábica</h4>
-                    <p>Suave y afrutado.</p>
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
+                    <h4 class="font-semibold">Café de Colombia</h4>
+                    <p>Notas frutales y dulces.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
-                    <h4 class="font-semibold">Café Robusta</h4>
-                    <p>Fuerte y amargo.</p>
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
+                    <h4 class="font-semibold">Café de Etiopía</h4>
+                    <p>Floral y afrutado.</p>
                 </div>
-                <div class="card bg-white rounded-lg shadow p-4">
-                    <h4 class="font-semibold">Café Blend</h4>
-                    <p>Equilibrado y complejo.</p>
-                </div>
-            </div>
-        </section>
-        <section class="container mx-auto py-10">
-            <h3 class="text-3xl font-bold mb-4">Testimonios</h3>
-            <div class="flex space-x-4 overflow-x-auto">
-                <div class="bg-white rounded-lg shadow p-4 w-64">
-                    <p>"El mejor café que he probado!"</p>
-                    <p class="text-gray-500">- Cliente Satisfecho</p>
-                </div>
-                <div class="bg-white rounded-lg shadow p-4 w-64">
-                    <p>"Una experiencia única en cada taza."</p>
-                    <p class="text-gray-500">- Amante del Café</p>
+                <div class="card bg-gray-100 rounded-lg p-4 shadow">
+                    <h4 class="font-semibold">Café de Brasil</h4>
+                    <p>Chocolate y nuez.</p>
                 </div>
             </div>
         </section>
-        <section id="ubicacion" class="container mx-auto py-10">
-            <h3 class="text-3xl font-bold mb-4">Ubicación</h3>
-            <p>📍 Calle Falsa 123, Ciudad, País</p>
+        <section class="container mx-auto my-12">
+            <h3 class="text-2xl font-semibold mb-6">Testimonios de Clientes</h3>
+            <div class="flex overflow-x-auto space-x-4">
+                <div class="bg-gray-100 rounded-lg p-4 shadow min-w-[200px]">"El mejor café que he probado!"</div>
+                <div class="bg-gray-100 rounded-lg p-4 shadow min-w-[200px]">"Una experiencia sensorial única."</div>
+                <div class="bg-gray-100 rounded-lg p-4 shadow min-w-[200px]">"Volveré sin duda."</div>
+            </div>
+        </section>
+        <section id="ubicacion" class="container mx-auto my-12">
+            <h3 class="text-2xl font-semibold mb-6">Ubicación</h3>
+            <p>📍 Avenida del Café 123, Ciudad, País</p>
             <p>📞 (123) 456-7890</p>
-            <p>🕰️ Lunes a Viernes: 8am - 6pm</p>
+            <p>🕰️ Lunes a Domingo: 8am - 8pm</p>
         </section>
-        <section id="contact" class="container mx-auto py-10">
-            <h3 class="text-3xl font-bold mb-4">Contacto</h3>
-            <form class="bg-white rounded-lg shadow p-6">
-                <label class="block mb-2" for="name">Nombre</label>
-                <input class="w-full p-2 border border-gray-300 rounded mb-4" type="text" id="name" name="name" required>
-                <label class="block mb-2" for="email">Email</label>
-                <input class="w-full p-2 border border-gray-300 rounded mb-4" type="email" id="email" name="email" required>
-                <label class="block mb-2" for="message">Mensaje</label>
-                <textarea class="w-full p-2 border border-gray-300 rounded mb-4" id="message" name="message" required></textarea>
-                <button type="submit" class="bg-yellow-500 text-white px-4 py-2 rounded w-full">Enviar</button>
+        <section id="contact" class="container mx-auto my-12">
+            <h3 class="text-2xl font-semibold mb-6">Contáctanos</h3>
+            <form class="bg-gray-100 rounded-lg p-6">
+                <label class="block mb-2" for="name">Nombre:</label>
+                <input class="w-full mb-4 p-2 border rounded" type="text" id="name" required>
+                <label class="block mb-2" for="email">Email:</label>
+                <input class="w-full mb-4 p-2 border rounded" type="email" id="email" required>
+                <label class="block mb-2" for="message">Mensaje:</label>
+                <textarea class="w-full mb-4 p-2 border rounded" id="message" rows="4" required></textarea>
+                <button class="bg-yellow-500 text-white px-4 py-2 rounded" type="submit" onclick="logCTA()">Enviar</button>
             </form>
         </section>
-        <section class="py-10">
-            <details class="container mx-auto mb-6">
-                <summary class="cursor-pointer text-2xl font-bold">Preguntas Frecuentes</summary>
-                <div class="pl-4">
-                    <p>¿Cuál es el café más popular?</p>
-                    <p>El café Arábica es el favorito de nuestros clientes.</p>
-                </div>
+        <section class="container mx-auto my-12">
+            <h3 class="text-2xl font-semibold mb-6">Preguntas Frecuentes</h3>
+            <details class="mb-4">
+                <summary class="cursor-pointer">¿Cuál es el origen de su café?</summary>
+                <p>Nuestro café proviene de las mejores fincas de América Latina.</p>
+            </details>
+            <details class="mb-4">
+                <summary class="cursor-pointer">¿Hacen envíos a domicilio?</summary>
+                <p>Sí, ofrecemos envíos a todo el país.</p>
             </details>
         </section>
     </main>
-    <footer class="bg-gray-800 text-white py-10">
-        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-4">
             <div>
                 <h4 class="font-bold">Merkuria Café</h4>
-                <p>Experiencias sensoriales en cada taza.</p>
+                <p>Tu experiencia de café artesanal.</p>
             </div>
             <div>
                 <h4 class="font-bold">Información</h4>
                 <ul>
-                    <li><a href="#ubicacion" class="text-yellow-400">Ubicación</a></li>
-                    <li><a href="#contact" class="text-yellow-400">Contacto</a></li>
+                    <li><a href="#ubicacion" class="text-yellow-500">Ubicación</a></li>
+                    <li><a href="#contact" class="text-yellow-500">Contacto</a></li>
                 </ul>
             </div>
             <div>
                 <h4 class="font-bold">Contacto</h4>
-                <p>Email: info@merkuriacafe.com</p>
-                <p>Teléfono: (123) 456-7890</p>
+                <p>📧 info@merkuria.com</p>
             </div>
             <div>
                 <h4 class="font-bold">Redes Sociales</h4>
-                <div class="flex space-x-2">
-                    <a href="#" aria-label="Facebook"><svg class="w-6 h-6" fill="currentColor"><circle cx="12" cy="12" r="10" /></svg></a>
-                    <a href="#" aria-label="Twitter"><svg class="w-6 h-6" fill="currentColor"><circle cx="12" cy="12" r="10" /></svg></a>
-                    <a href="#" aria-label="Instagram"><svg class="w-6 h-6" fill="currentColor"><circle cx="12" cy="12" r="10" /></svg></a>
-                </div>
+                <a href="#" class="text-yellow-500">Facebook</a><br>
+                <a href="#" class="text-yellow-500">Instagram</a>
             </div>
         </div>
     </footer>
