--- a/MerkuriaCafeArtesanal/index.html
+++ b/MerkuriaCafeArtesanal/index.html
@@ -2,136 +2,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Merkuria Café Artesanal, especializado en café de calidad y experiencias sensoriales.">
     <title>Merkuria Cafe Artesanal</title>
-    <meta name="description" content="Disfruta del café de especialidad y experiencias sensoriales en Merkuria Café Artesanal.">
     <link rel="canonical" href="https://www.merkuriacafe.com">
-    <meta property="og:title" content="Merkuria Cafe Artesanal">
-    <meta property="og:description" content="Disfruta del café de especialidad y experiencias sensoriales en Merkuria Café Artesanal.">
+    <meta property="og:title" content="Merkuria Café Artesanal">
+    <meta property="og:description" content="Café de especialidad y experiencias sensoriales.">
     <meta property="og:image" content="placeholder.jpg">
     <meta property="og:url" content="https://www.merkuriacafe.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Merkuria Cafe Artesanal">
-    <meta name="twitter:description" content="Disfruta del café de especialidad y experiencias sensoriales en Merkuria Café Artesanal.">
+    <meta name="twitter:title" content="Merkuria Café Artesanal">
+    <meta name="twitter:description" content="Café de especialidad y experiencias sensoriales.">
     <meta name="twitter:image" content="placeholder.jpg">
     
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-white text-gray-800">
-    <header class="sticky top-0 z-10 bg-white shadow">
-        <nav class="container mx-auto flex justify-between items-center p-4">
+<body class="bg-gray-100">
+    <header class="sticky top-0 bg-white shadow">
+        <nav class="max-w-7xl mx-auto flex justify-between items-center p-4">
             <h1 class="text-xl font-bold">Merkuria Café</h1>
-            <div>
-                <a href="#contact" class="bg-yellow-500 text-white px-4 py-2 rounded" onclick="logCTA()">Ordenar en Línea</a>
-                <a href="#ubicacion" class="ml-4 text-yellow-500" onclick="logCTA()">Visitar la Tienda</a>
-            </div>
+            <a href="#contact" class="cta bg-yellow-500 text-white px-4 py-2 rounded">Ordenar en Línea</a>
         </nav>
     </header>
     <main>
         <section class="hero h-screen flex items-center justify-center text-center">
-            <div>
+            <div class="p-8">
                 <h2 class="text-4xl font-bold mb-2">Descubre el Sabor del Café Artesanal</h2>
-                <p class="mb-4">Sumérgete en nuestra historia y filosofía de café de especialidad.</p>
+                <p class="mb-4">Nuestra pasión por el café se refleja en cada taza que servimos.</p>
+                <a href="#products" class="cta bg-yellow-500 text-white px-4 py-2 rounded">Visita Nuestra Tienda</a>
             </div>
         </section>
-        <section class="container mx-auto my-12">
-            <h3 class="text-2xl font-semibold mb-6">Métodos de Preparación</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Espresso</h4>
-                    <p>Intenso y concentrado.</p>
+        <section id="products" class="py-16">
+            <h2 class="text-3xl text-center font-bold mb-8">Variedades de Café</h2>
+            <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+                <div class="bg-white p-6 rounded shadow hover:shadow-lg transition">
+                    <h3 class="font-semibold">Espresso</h3>
+                    <ul class="list-disc pl-5">
+                        <li>Intenso y concentrado</li>
+                        <li>Perfecto para empezar el día</li>
+                    </ul>
+                    <a href="#" class="cta text-yellow-500">Más Información</a>
                 </div>
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Pour-Over</h4>
-                    <p>Control total sobre el sabor.</p>
+                <div class="bg-white p-6 rounded shadow hover:shadow-lg transition">
+                    <h3 class="font-semibold">Pour-Over</h3>
+                    <ul class="list-disc pl-5">
+                        <li>Sabores complejos</li>
+                        <li>Proceso manual</li>
+                    </ul>
+                    <a href="#" class="cta text-yellow-500">Más Información</a>
                 </div>
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Prensa Francesa</h4>
-                    <p>Rico y suave.</p>
-                </div>
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Cold Brew</h4>
-                    <p>Refrescante y suave.</p>
-                </div>
-            </div>
-        </section>
-        <section class="container mx-auto my-12">
-            <h3 class="text-2xl font-semibold mb-6">Variedades de Café</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Café de Colombia</h4>
-                    <p>Notas frutales y dulces.</p>
-                </div>
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Café de Etiopía</h4>
-                    <p>Floral y afrutado.</p>
-                </div>
-                <div class="card bg-gray-100 rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Café de Brasil</h4>
-                    <p>Chocolate y nuez.</p>
+                <div class="bg-white p-6 rounded shadow hover:shadow-lg transition">
+                    <h3 class="font-semibold">Prensa Francesa</h3>
+                    <ul class="list-disc pl-5">
+                        <li>Rico y aromático</li>
+                        <li>Ideal para compartir</li>
+                    </ul>
+                    <a href="#" class="cta text-yellow-500">Más Información</a>
                 </div>
             </div>
         </section>
-        <section class="container mx-auto my-12">
-            <h3 class="text-2xl font-semibold mb-6">Testimonios de Clientes</h3>
-            <div class="flex overflow-x-auto space-x-4">
-                <div class="bg-gray-100 rounded-lg p-4 shadow min-w-[200px]">"El mejor café que he probado!"</div>
-                <div class="bg-gray-100 rounded-lg p-4 shadow min-w-[200px]">"Una experiencia sensorial única."</div>
-                <div class="bg-gray-100 rounded-lg p-4 shadow min-w-[200px]">"Volveré sin duda."</div>
+        <section class="py-16 bg-gray-200">
+            <h2 class="text-3xl text-center font-bold mb-8">Métodos de Preparación</h2>
+            <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="flex items-start">
+                    <span class="text-4xl mr-4">☕</span>
+                    <div>
+                        <h3 class="font-semibold">Espresso</h3>
+                        <p>El espresso es la base de muchas bebidas de café, ofreciendo un sabor intenso y concentrado.</p>
+                    </div>
+                </div>
+                <div class="flex items-start">
+                    <span class="text-4xl mr-4">🌊</span>
+                    <div>
+                        <h3 class="font-semibold">Pour-Over</h3>
+                        <p>Este método permite un control total sobre la extracción, resaltando los sabores únicos del café.</p>
+                    </div>
+                </div>
+                <div class="flex items-start">
+                    <span class="text-4xl mr-4">🛠️</span>
+                    <div>
+                        <h3 class="font-semibold">Prensa Francesa</h3>
+                        <p>Con este método, el café se infunde en agua caliente, creando una bebida rica y aromática.</p>
+                    </div>
+                </div>
+                <div class="flex items-start">
+                    <span class="text-4xl mr-4">❄️</span>
+                    <div>
+                        <h3 class="font-semibold">Cold Brew</h3>
+                        <p>El café se prepara en frío, resultando en una bebida suave y menos ácida.</p>
+                    </div>
+                </div>
             </div>
         </section>
-        <section id="ubicacion" class="container mx-auto my-12">
-            <h3 class="text-2xl font-semibold mb-6">Ubicación</h3>
-            <p>📍 Avenida del Café 123, Ciudad, País</p>
-            <p>📞 (123) 456-7890</p>
-            <p>🕰️ Lunes a Domingo: 8am - 8pm</p>
+        <section class="py-16">
+            <h2 class="text-3xl text-center font-bold mb-8">Testimonios de Clientes</h2>
+            <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6">
+                <blockquote class="bg-white p-6 rounded shadow">
+                    <p>"El mejor café que he probado. ¡Altamente recomendado!"</p>
+                    <cite>- Cliente Satisfecho</cite>
+                </blockquote>
+                <blockquote class="bg-white p-6 rounded shadow">
+                    <p>"Una experiencia sensorial única. Definitivamente volveré."</p>
+                    <cite>- Amante del Café</cite>
+                </blockquote>
+            </div>
         </section>
-        <section id="contact" class="container mx-auto my-12">
-            <h3 class="text-2xl font-semibold mb-6">Contáctanos</h3>
-            <form class="bg-gray-100 rounded-lg p-6">
-                <label class="block mb-2" for="name">Nombre:</label>
-                <input class="w-full mb-4 p-2 border rounded" type="text" id="name" required>
-                <label class="block mb-2" for="email">Email:</label>
-                <input class="w-full mb-4 p-2 border rounded" type="email" id="email" required>
-                <label class="block mb-2" for="message">Mensaje:</label>
-                <textarea class="w-full mb-4 p-2 border rounded" id="message" rows="4" required></textarea>
-                <button class="bg-yellow-500 text-white px-4 py-2 rounded" type="submit" onclick="logCTA()">Enviar</button>
+        <section id="contact" class="py-16 bg-gray-200">
+            <h2 class="text-3xl text-center font-bold mb-8">Contáctanos</h2>
+            <form class="max-w-md mx-auto">
+                <label for="name" class="block mb-2">Nombre:</label>
+                <input type="text" id="name" name="name" class="w-full p-2 mb-4 border rounded" required>
+                <label for="email" class="block mb-2">Email:</label>
+                <input type="email" id="email" name="email" class="w-full p-2 mb-4 border rounded" required>
+                <label for="message" class="block mb-2">Mensaje:</label>
+                <textarea id="message" name="message" class="w-full p-2 mb-4 border rounded" required></textarea>
+                <button type="submit" class="cta bg-yellow-500 text-white w-full p-2 rounded">Enviar</button>
             </form>
         </section>
-        <section class="container mx-auto my-12">
-            <h3 class="text-2xl font-semibold mb-6">Preguntas Frecuentes</h3>
-            <details class="mb-4">
-                <summary class="cursor-pointer">¿Cuál es el origen de su café?</summary>
-                <p>Nuestro café proviene de las mejores fincas de América Latina.</p>
-            </details>
-            <details class="mb-4">
-                <summary class="cursor-pointer">¿Hacen envíos a domicilio?</summary>
-                <p>Sí, ofrecemos envíos a todo el país.</p>
-            </details>
+        <section class="py-16">
+            <h2 class="text-3xl text-center font-bold mb-8">Ubicación</h2>
+            <div class="max-w-md mx-auto">
+                <p>📍 Calle Falsa 123, Ciudad, País</p>
+                <p>📞 (123) 456-7890</p>
+                <p>🕰️ Lunes a Viernes: 8am - 6pm</p>
+            </div>
         </section>
     </main>
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-4">
+    <footer class="bg-gray-800 text-white py-8">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
             <div>
-                <h4 class="font-bold">Merkuria Café</h4>
-                <p>Tu experiencia de café artesanal.</p>
+                <h3 class="font-bold">Merkuria Café</h3>
+                <p>Tu destino para café de especialidad.</p>
             </div>
             <div>
-                <h4 class="font-bold">Información</h4>
+                <h3 class="font-bold">Información</h3>
                 <ul>
-                    <li><a href="#ubicacion" class="text-yellow-500">Ubicación</a></li>
-                    <li><a href="#contact" class="text-yellow-500">Contacto</a></li>
+                    <li><a href="#" class="text-yellow-400">Sobre Nosotros</a></li>
+                    <li><a href="#" class="text-yellow-400">Política de Privacidad</a></li>
                 </ul>
             </div>
             <div>
-                <h4 class="font-bold">Contacto</h4>
-                <p>📧 info@merkuria.com</p>
+                <h3 class="font-bold">Contacto</h3>
+                <ul>
+                    <li><a href="mailto:info@merkuriacafe.com" class="text-yellow-400">Email</a></li>
+                    <li><a href="tel:+1234567890" class="text-yellow-400">Teléfono</a></li>
+                </ul>
             </div>
             <div>
-                <h4 class="font-bold">Redes Sociales</h4>
-                <a href="#" class="text-yellow-500">Facebook</a><br>
-                <a href="#" class="text-yellow-500">Instagram</a>
+                <h3 class="font-bold">Redes Sociales</h3>
+                <ul class="flex space-x-4">
+                    <li><a href="#" class="text-yellow-400">Facebook</a></li>
+                    <li><a href="#" class="text-yellow-400">Instagram</a></li>
+                    <li><a href="#" class="text-yellow-400">Twitter</a></li>
+                </ul>
             </div>
         </div>
     </footer>
