chore: add MerkuriaCafeArtesanal2/index.html

--- a/MerkuriaCafeArtesanal2/index.html
+++ b/MerkuriaCafeArtesanal2/index.html
@@ -2,180 +2,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Merkuria Café Artesanal - Café de especialidad y experiencias sensoriales.">
-    <link rel="canonical" href="https://www.merkuriacafe.com">
-    <meta property="og:title" content="Merkuria Café Artesanal">
-    <meta property="og:description" content="Café de especialidad y experiencias sensoriales.">
-    <meta property="og:image" content="placeholder-image.jpg">
-    <meta property="og:url" content="https://www.merkuriacafe.com">
     <title>Merkuria Cafe Artesanal</title>
+    <meta name="description" content="Descubre la experiencia sensorial del café de especialidad en Merkuria Café Artesanal.">
+    <link rel="canonical" href="https://www.merkuriacafe.com">
+    <meta property="og:title" content="Merkuria Cafe Artesanal">
+    <meta property="og:description" content="Descubre la experiencia sensorial del café de especialidad en Merkuria Café Artesanal.">
+    <meta property="og:image" content="placeholder-image-url">
+    <meta property="og:url" content="https://www.merkuriacafe.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Merkuria Cafe Artesanal">
+    <meta name="twitter:description" content="Descubre la experiencia sensorial del café de especialidad en Merkuria Café Artesanal.">
+    <meta name="twitter:image" content="placeholder-image-url">
+    
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-gray-100 text-gray-800">
-
-<header class="sticky top-0 bg-white shadow">
-    <nav class="container mx-auto flex justify-between items-center p-4">
-        <div class="text-lg font-bold">Merkuria Café</div>
-        <div>
-            <a href="#contact" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600">Ordenar en Línea</a>
-        </div>
-    </nav>
-</header>
-
-<main>
-    <section class="hero h-screen flex flex-col justify-center items-center text-center p-4">
-        <h1 class="text-5xl font-bold mb-2">Descubre el Sabor del Café</h1>
-        <p class="text-xl mb-4">Nuestra historia y filosofía se centran en la calidad y la experiencia sensorial.</p>
-        <div>
-            <a href="#productos" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600">Ver Productos</a>
-            <a href="#ubicacion" class="bg-transparent border border-yellow-500 text-yellow-500 px-4 py-2 rounded hover:bg-yellow-500 hover:text-white">Visitar la Tienda</a>
-        </div>
-    </section>
-
-    <section id="productos" class="container mx-auto py-16">
-        <h2 class="text-3xl font-bold text-center mb-8">Variedades de Café</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-white rounded-lg shadow p-4">
-                <h3 class="font-semibold">Espresso</h3>
-                <ul class="list-disc list-inside">
-                    <li>Intenso y concentrado</li>
-                    <li>Perfecto para comenzar el día</li>
-                </ul>
-                <a href="#" class="text-yellow-500 hover:underline">Más Info</a>
-            </div>
-            <div class="bg-white rounded-lg shadow p-4">
-                <h3 class="font-semibold">Pour-Over</h3>
-                <ul class="list-disc list-inside">
-                    <li>Suave y aromático</li>
-                    <li>Ideal para degustar</li>
-                </ul>
-                <a href="#" class="text-yellow-500 hover:underline">Más Info</a>
-            </div>
-            <div class="bg-white rounded-lg shadow p-4">
-                <h3 class="font-semibold">Prensa Francesa</h3>
-                <ul class="list-disc list-inside">
-                    <li>Rico y lleno de cuerpo</li>
-                    <li>Una experiencia única</li>
-                </ul>
-                <a href="#" class="text-yellow-500 hover:underline">Más Info</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="container mx-auto py-16">
-        <h2 class="text-3xl font-bold text-center mb-8">Métodos de Preparación</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <div class="flex items-start bg-white rounded-lg shadow p-4">
-                <span class="text-4xl mr-4">☕</span>
-                <div>
-                    <h3 class="font-semibold">Método Espresso</h3>
-                    <p>Concentrado y potente, ideal para los amantes del café fuerte.</p>
-                </div>
-            </div>
-            <div class="flex items-start bg-white rounded-lg shadow p-4">
-                <span class="text-4xl mr-4">🌊</span>
-                <div>
-                    <h3 class="font-semibold">Método Pour-Over</h3>
-                    <p>Suave y aromático, perfecto para disfrutar cada sorbo.</p>
-                </div>
-            </div>
-            <div class="flex items-start bg-white rounded-lg shadow p-4">
-                <span class="text-4xl mr-4">🌀</span>
-                <div>
-                    <h3 class="font-semibold">Prensa Francesa</h3>
-                    <p>Rico y lleno de cuerpo, una experiencia única en cada taza.</p>
-                </div>
-            </div>
-            <div class="flex items-start bg-white rounded-lg shadow p-4">
-                <span class="text-4xl mr-4">❄️</span>
-                <div>
-                    <h3 class="font-semibold">Cold Brew</h3>
-                    <p>Refrescante y suave, ideal para los días calurosos.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="container mx-auto py-16">
-        <h2 class="text-3xl font-bold text-center mb-8">Testimonios de Clientes</h2>
-        <div class="flex justify-center">
-            <blockquote class="bg-white rounded-lg shadow p-6 max-w-md">
-                <p class="italic">"El mejor café que he probado. ¡Definitivamente volveré!"</p>
-                <footer class="mt-4">— Juan Pérez</footer>
-            </blockquote>
-        </div>
-    </section>
-
-    <section id="ubicacion" class="container mx-auto py-16">
-        <h2 class="text-3xl font-bold text-center mb-8">Ubicación</h2>
-        <div class="text-center">
-            <p>📍 Calle Ejemplo 123, Ciudad, País</p>
-            <p>📞 (123) 456-7890</p>
-            <p>🕰️ Lunes a Viernes: 8 AM - 6 PM</p>
-        </div>
-    </section>
-
-    <section id="contact" class="container mx-auto py-16">
-        <h2 class="text-3xl font-bold text-center mb-8">Contáctanos</h2>
-        <form class="bg-white rounded-lg shadow p-6 max-w-md mx-auto">
-            <label for="name" class="block mb-2">Nombre:</label>
-            <input type="text" id="name" class="w-full border border-gray-300 rounded p-2 mb-4" required>
-
-            <label for="email" class="block mb-2">Email:</label>
-            <input type="email" id="email" class="w-full border border-gray-300 rounded p-2 mb-4" required>
-
-            <label for="message" class="block mb-2">Mensaje:</label>
-            <textarea id="message" class="w-full border border-gray-300 rounded p-2 mb-4" rows="4" required></textarea>
-
-            <button type="submit" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600">Enviar</button>
-        </form>
-    </section>
-
-    <section class="py-16">
-        <h2 class="text-3xl font-bold text-center mb-8">Preguntas Frecuentes</h2>
-        <div class="container mx-auto">
-            <details class="mb-4">
-                <summary class="font-semibold cursor-pointer">¿Qué tipos de café ofrecen?</summary>
-                <p>Ofrecemos una variedad de cafés de especialidad, incluyendo espresso, pour-over, prensa francesa y cold brew.</p>
-            </details>
-            <details class="mb-4">
-                <summary class="font-semibold cursor-pointer">¿Tienen opciones sin cafeína?</summary>
-                <p>Sí, ofrecemos opciones de café descafeinado para quienes prefieren evitar la cafeína.</p>
-            </details>
-        </div>
-    </section>
-</main>
-
-<footer class="bg-gray-800 text-white py-8">
-    <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
-        <div>
-            <h3 class="font-bold">Merkuria Café</h3>
-            <p>Calidad y experiencia en cada taza.</p>
-        </div>
-        <div>
-            <h3 class="font-bold">Información</h3>
-            <ul>
-                <li><a href="#" class="hover:underline">Sobre Nosotros</a></li>
-                <li><a href="#" class="hover:underline">Política de Privacidad</a></li>
+<body class="font-sans">
+    <header class="sticky top-0 bg-white shadow">
+        <nav class="container mx-auto flex justify-between items-center p-4">
+            <h1 class="text-lg font-bold">Merkuria Café</h1>
+            <ul class="flex space-x-4">
+                <li><a href="#hero" class="text-gray-700 hover:text-yellow-500">Inicio</a></li>
+                <li><a href="#features" class="text-gray-700 hover:text-yellow-500">Métodos</a></li>
+                <li><a href="#testimonials" class="text-gray-700 hover:text-yellow-500">Testimonios</a></li>
+                <li><a href="#contact" class="text-gray-700 hover:text-yellow-500">Contacto</a></li>
             </ul>
-        </div>
-        <div>
-            <h3 class="font-bold">Contacto</h3>
-            <p>Email: contacto@merkuriacafe.com</p>
-            <p>Teléfono: (123) 456-7890</p>
-        </div>
-        <div>
-            <h3 class="font-bold">Síguenos</h3>
-            <a href="#" class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12 0c-6.627 0-12 5.373-12 12 0 5.25 3.438 9.688 8 11.2v-7.9h-2.4v-3.3h2.4v-2.4c0-2.4 1.4-3.7 3.5-3.7 1 0 2.1.2 2.1.2v2.4h-1.2c-1.2 0-1.6.7-1.6 1.5v1.8h2.8l-.4 3.3h-2.4v7.9c4.562-1.512 8-5.95 8-11.2 0-6.627-5.373-12-12-12z"/></svg></a>
-            <a href="#" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6"><path d="M12 0c-6.627 0-12 5.373-12 12 0 5.25 3.438 9.688 8 11.2v-7.9h-2.4v-3.3h2.4v-2.4c0-2.4 1.4-3.7 3.5-3.7 1 0 2.1.2 2.1.2v2.4h-1.2c-1.2 0-1.6.7-1.6 1.5v1.8h2.8l-.4 3.3h-2.4v7.9c4.562-1.512 8-5.95 8-11.2 0-6.627-5.373-12-12-12z"/></svg></a>
-        </div>
-    </div>
-</footer>
+            <a href="#" class="cta bg-yellow-500 text-white px-4 py-2 rounded shadow hover:shadow-lg">Ordenar en Línea</a>
+        </nav>
+    </header>
 
+    <main>
+        <section id="hero" class="hero h-screen flex flex-col justify-center items-center text-center text-white p-4">
+            <h2 class="text-5xl font-bold">Descubre el Sabor del Café</h2>
+            <p class="mt-4 text-xl">Una experiencia sensorial única en cada taza.</p>
+            <div class="mt-6">
+                <a href="#" class="cta bg-yellow-500 text-white px-4 py-2 rounded shadow hover:shadow-lg">Visitar la Tienda</a>
+            </div>
+        </section>
 
+        <section id="features" class="container mx-auto py-16">
+            <h3 class="text-3xl font-bold text-center">Métodos de Preparación</h3>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
+                <div class="bg-white rounded-lg shadow p-4">
+                    <h4 class="font-bold">Espresso</h4>
+                    <p>Concentrado y lleno de sabor.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4">
+                    <h4 class="font-bold">Pour-Over</h4>
+                    <p>Control total sobre la infusión.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4">
+                    <h4 class="font-bold">Prensa Francesa</h4>
+                    <p>Rico y suave, ideal para compartir.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow p-4">
+                    <h4 class="font-bold">Cold Brew</h4>
+                    <p>Refrescante y suave, perfecto para el verano.</p>
+                </div>
+            </div>
+        </section>
 
+        <section id="testimonials" class="container mx-auto py-16">
+            <h3 class="text-3xl font-bold text-center">Testimonios</h3>
+            <div class="flex justify-center space-x-4 mt-8">
+                <div class="bg-white rounded-lg shadow p-4">"El mejor café que he probado!"</div>
+                <div class="bg-white rounded-lg shadow p-4">"Una experiencia única cada vez."</div>
+                <div class="bg-white rounded-lg shadow p-4">"Me encanta su variedad de métodos."</div>
+            </div>
+        </section>
+
+        <section id="contact" class="container mx-auto py-16">
+            <h3 class="text-3xl font-bold text-center">Contacto</h3>
+            <form class="mt-8">
+                <label for="name" class="block">Nombre:</label>
+                <input type="text" id="name" class="w-full p-2 border rounded mb-4" required>
+                <label for="email" class="block">Email:</label>
+                <input type="email" id="email" class="w-full p-2 border rounded mb-4" required>
+                <label for="message" class="block">Mensaje:</label>
+                <textarea id="message" class="w-full p-2 border rounded mb-4" required></textarea>
+                <button type="submit" class="cta bg-yellow-500 text-white px-4 py-2 rounded shadow hover:shadow-lg w-full">Enviar</button>
+            </form>
+        </section>
+
+        <section id="location" class="container mx-auto py-16">
+            <h3 class="text-3xl font-bold text-center">Ubicación</h3>
+            <p class="mt-4">📍 Calle Falsa 123, Ciudad, País</p>
+            <p>📞 (123) 456-7890</p>
+            <p>🕰️ Lunes a Viernes: 8am - 6pm</p>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-8">
+        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
+            <div>
+                <h4 class="font-bold">Merkuria Café</h4>
+                <p>El arte del café en cada taza.</p>
+            </div>
+            <div>
+                <h4 class="font-bold">Información</h4>
+                <ul>
+                    <li><a href="#" class="hover:underline">Sobre Nosotros</a></li>
+                    <li><a href="#" class="hover:underline">Política de Privacidad</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-bold">Contacto</h4>
+                <p>Email: contacto@merkuriacafe.com</p>
+            </div>
+            <div>
+                <h4 class="font-bold">Redes</h4>
+                <a href="#" class="hover:underline">Facebook</a><br>
+                <a href="#" class="hover:underline">Instagram</a>
+            </div>
+        </div>
+    </footer>
 
   <!-- Chatwoot -->
   
